# netbox-plugin-dhcp

./: COMPATIBILITY.md  CONTRIBUTING.md  LICENSE  README.md  netbox-plugin.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  publish.yml  test.yml
netbox_dhcp/: __init__.py  navigation.py  template_content.py  urls.py
netbox_dhcp/api/: nested_serializers.py  serializers.py  urls.py  views.py
netbox_dhcp/choices/: __init__.py  ddns.py  dhcp_server.py  host_reservation.py  netbox_dhcp.py  option.py
netbox_dhcp/filtersets/: __init__.py  client_class.py  dhcp_cluster.py  dhcp_server.py  host_reservation.py  mixins.py  option.py  option_definition.py  pd_pool.py  pool.py  shared_network.py  subnet.py
netbox_dhcp/forms/: client_class.py  ddns.py  dhcp_cluster.py  dhcp_server.py  host_reservation.py  mixins.py  option.py  option_definition.py  pd_pool.py  pool.py  shared_network.py  subnet.py
netbox_dhcp/graphql/: __init__.py  schema.py  types.py
netbox_dhcp/migrations/: 0001_initial.py  0002_dhcpcluster_status_dhcpserver_device_and_more.py  0002_optiondefinition_family.py  0003_clientclass_boot_file_name_clientclass_comment_and_more.py  0003_import_option_definitions.py  0003_remove_option_always_send_remove_option_never_send_and_more.py  0004_alter_clientclass_only_if_required_and_more.py  0004_alter_clientclass_user_context.py  0004_remove_dhcpserver_child_client_classes_and_more.py  0005_alter_dhcpserver_child_host_reservations_and_more.py  0005_alter_dhcpserver_ddns_generated_prefix_and_more.py  (+67 more)
(+150 files in other folders)
