[project]
name = "netbox-plugin-dhcp"
version = "0.0.14"
description = "NetBox DHCP is a NetBox plugin for DHCP data."
authors = [
    {name="Peter Eckel", email="pe@sys4.de"},
]
license-files = [
    "LICENSE"
]
readme = "README.md"
keywords = ["netbox", "netbox-plugin", "dhcp"]
classifiers = [
    "Development Status :: 4 - Beta"
]
dependencies = []
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/peteeckel/netbox-plugin-dhcp"
# Documentation = "https://github.com/peteeckel/netbox-plugin-dns/blob/main/docs/using_netbox_dns.md"
Repository = "https://github.com/peteeckel/netbox-plugin-dhcp"
Issues = "https://github.com/peteeckel/netbox-plugin-dhcp/issues"

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
exclude = ["examples*", "media*", "*.tests*"]

[tool.setuptools.package-data]
"netbox_dhcp" = [
    "templates/**/*.html",
    "migrations/initial_data/*.json",
]
